<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etEditAppointmentPetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_pet_name"
            android:inputType="textPersonName"
            android:padding="8dp" />

        <EditText
            android:id="@+id/etEditAppointmentService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_service"
            android:inputType="text"
            android:padding="8dp"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/etEditAppointmentDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_date"
            android:inputType="text"
            android:padding="8dp"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/etEditAppointmentTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_time"
            android:inputType="text"
            android:padding="8dp"
            android:layout_marginTop="8dp" />

    </LinearLayout>
</ScrollView>